--- a/Week01_200126/First.html
+++ b/Week01_200126/First.html
@@ -8,7 +8,30 @@
 <body>
     <h1>First Line</h1>
     <h6>Second Line</h6>
-    <a href="www.google.co.in">
+    <a href="www.google.co.in"></a>
+
+
+    <h1>MOTA BHAI</h1>
+    <p>
+Amit Shah’s role in the 2002 Gujarat riots has been controversial and widely debated, 
+mainly because of the positions he held and the legal cases that followed. 
+
+Here is a clear, factual breakdown:
+Position at the time
+
+In <b>2002</b>, Amit Shah was a Gujarat state minister (Minister of State for Home, among other portfolios) under Chief Minister Narendra Modi.
+The Home Department was responsible for law and order during the riots.
+Allegations & accusations
+He was accused by some activists and opposition leaders of:
+Administrative failure in controlling violence
+Alleged involvement in fake encounter cases that occurred later 
+(not directly riot violence, but linked to the same period of governance)
+
+<b>Legal proceedings</b>
+The CBI investigated Amit Shah in the Sohrabuddin Sheikh fake encounter case.
+In 2014, a special CBI court discharged Amit Shah, stating there was no prosecutable evidence against him.
+The Supreme Court of India later upheld the discharge, effectively clearing him legally.
+</p>
 
     
 </body>
