--- a/Week01_200126/First.html
+++ b/Week01_200126/First.html
@@ -6,32 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>First Line</h1>
-    <h6>Second Line</h6>
-    <a href="www.google.co.in"></a>
+    
 
 
-    <h1>MOTA BHAI</h1>
+    <center><h1>MOTA BHAI</h1></center>
     <p>
-Amit Shah’s role in the 2002 Gujarat riots has been controversial and widely debated, 
-mainly because of the positions he held and the legal cases that followed. 
+The <strong>Bharatiya Janata Party (BJP)</strong> is one of India’s two major national political parties and 
+currently the dominant political force at the Centre.<br> It was founded in <b>1980</b>, with its ideological roots in Indian nationalism and the philosophy of Hindutva.
+The BJP emerged as a strong national party in the 1990s, first forming a short-lived government in 1996 under Atal Bihari Vajpayee, and later leading stable coalition governments from 1998 to 2004.<br> Its biggest political breakthrough came in 2014, when it won a clear majority under Narendra Modi, ending decades of coalition dependence. <br>The party repeated its majority win in 2019 and continues to lead the government after the 2024 elections through the NDA alliance.<br>
+The BJP focuses on strong central leadership, national security, economic reforms, infrastructure development, and cultural identity.<br> Over the years, it has expanded its presence across most Indian states, transforming from a cadre-based party into a pan-India political organization.<br>
+In short:<br>
+The BJP has reshaped Indian politics by moving from coalition-era politics to long-term dominance, making it one of the most influential parties in India’s democratic history.
+<a href="https://en.wikipedia.org/wiki/Amit_Shah" target="_blank">
+    Visit Amit Shah Wikipedia
+</a>
+<img src="C:\Users\5024131\Downloads\amit.jpg.avif">
 
-Here is a clear, factual breakdown:
-Position at the time
-
-In <b>2002</b>, Amit Shah was a Gujarat state minister (Minister of State for Home, among other portfolios) under Chief Minister Narendra Modi.
-The Home Department was responsible for law and order during the riots.
-Allegations & accusations
-He was accused by some activists and opposition leaders of:
-Administrative failure in controlling violence
-Alleged involvement in fake encounter cases that occurred later 
-(not directly riot violence, but linked to the same period of governance)
-
-<b>Legal proceedings</b>
-The CBI investigated Amit Shah in the Sohrabuddin Sheikh fake encounter case.
-In 2014, a special CBI court discharged Amit Shah, stating there was no prosecutable evidence against him.
-The Supreme Court of India later upheld the discharge, effectively clearing him legally.
 </p>
+
+
 
     
 </body>
