--- a/Week02_270126/First.html
+++ b/Week02_270126/First.html
@@ -1,39 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        body {
-            background-color: lightblue;
-            background-image: url("amit.avif");
-
-}
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mota Bhai – BJP Overview</title>
+
+    <style>
+        body {
+            margin: 0;
+            min-height: 100vh;
+            font-family: "Georgia", serif;
+            background:
+                linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
+                url("amit.avif") no-repeat center center / cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 40px;
+        }
+
+        .card {
+            background: rgba(255, 255, 255, 0.9);
+            max-width: 900px;
+            padding: 30px 35px;
+            border-radius: 16px;
+            box-shadow: 0 25px 50px rgba(0,0,0,0.25);
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 0;
+            color: #1f2933;
+            letter-spacing: 1px;
+        }
+
+        p {
+            font-size: 1.05em;
+            line-height: 1.8;
+            color: #333;
+            text-align: justify;
+            background-color: rgba(0, 107, 63, 0.08);
+            padding: 18px;
+            border-left: 5px solid #1f77be;
+            border-radius: 6px;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 15px;
+            color: #1f77be;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .image-box {
+            text-align: center;
+            margin-top: 25px;
+        }
+
+        .image-box img {
+            max-width: 220px;
+            border-radius: 12px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+        }
     </style>
 </head>
-<body style="background-color: skyblue;">
+
+<body>
+
+    <div class="card">
+        <h1>MOTA BHAI</h1>
+
+        <p>
+    The <strong>Bharatiya Janata Party (BJP)</strong> is one of India’s two major national political parties and is
+    currently the most influential political force at the Centre. Founded in <strong>1980</strong>, the party
+    draws its ideological inspiration from Indian nationalism and the philosophy of Hindutva, emphasizing cultural
+    identity, national unity, and self-reliance. Over the decades, the BJP has evolved from a relatively small
+    political organization into a dominant national party with a strong organizational structure and grassroots
+    presence across the country.<br><br>
+
+
+
+    A major turning point in the party’s history occurred in <strong>2014</strong>, when the BJP secured a clear
+    parliamentary majority under the leadership of Narendra Modi. This victory marked a decisive shift from
+    coalition-era politics to strong central leadership. The party repeated its majority win in <strong>2019</strong>
+    and continues to lead the government after the <strong>2024 elections</strong> through the NDA alliance,
+    reinforcing its long-term dominance in Indian politics.<br><br>
+
     
 
-
-    <center><h1>MOTA BHAI</h1></center>
-    <p style="font-family: Georgia, serif; font-size: 1.1em; line-height: 1.8; color: #333; margin: 20px; text-align: justify; background-color: rgba(0, 107, 63, 0.6); padding: 15px; border-left: 4px solid #1f77be;"></p>>
-The <strong>Bharatiya Janata Party (BJP)</strong> is one of India’s two major national political parties and 
-currently the dominant political force at the Centre.<br> It was founded in <b>1980</b>, with its ideological roots in Indian nationalism and the philosophy of Hindutva.
-The BJP emerged as a strong national party in the 1990s, first forming a short-lived government in 1996 under Atal Bihari Vajpayee, and later leading stable coalition governments from 1998 to 2004.<br> Its biggest political breakthrough came in 2014, when it won a clear majority under Narendra Modi, ending decades of coalition dependence. <br>The party repeated its majority win in 2019 and continues to lead the government after the 2024 elections through the NDA alliance.<br>
-The BJP focuses on strong central leadership, national security, economic reforms, infrastructure development, and cultural identity.<br> Over the years, it has expanded its presence across most Indian states, transforming from a cadre-based party into a pan-India political organization.<br>
-In short:<br>
-The BJP has reshaped Indian politics by moving from coalition-era politics to long-term dominance, making it one of the most influential parties in India’s democratic history.
-<a href="https://en.wikipedia.org/wiki/Amit_Shah" target="_blank">
-    Visit Amit Shah Wikipedia
-</a>
-<img src="C:\Users\5024131\Downloads\amit.jpg.avif">
-
+    <strong>In conclusion,</strong> the Bharatiya Janata Party has played a transformative role in reshaping the
+    political landscape of India. By moving from fragmented coalition politics to sustained electoral dominance,
+    it has emerged as one of the most powerful and influential parties in the democratic history of the country.
 </p>
-
-
-
-    
-</body>
-</html>
