--- a/Week03_030226/index.html
+++ b/Week03_030226/index.html
@@ -4,10 +4,41 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>My Portfolio</title>
+<title>Student Portfolio</title>
 
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<style>
+    body {
+        font-family: 'Segoe UI', sans-serif;
+        background-color: #f8f9fa;
+    }
+
+    /* JUMBOTRON STYLE */
+    .jumbotron-custom {
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        color: white;
+        padding: 80px 20px;
+        text-align: center;
+    }
+
+    .section-title {
+        text-align: center;
+        margin-bottom: 30px;
+        font-weight: 600;
+        color: #333;
+    }
+
+    .card {
+        border-radius: 12px;
+    }
+
+    footer {
+        background-color: #212529;
+        color: white;
+    }
+</style>
 </head>
 
 <body>
@@ -15,26 +46,36 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">My Portfolio</a>
+    <a class="navbar-brand" href="#">Student’s Portfolio</a>
   </div>
 </nav>
 
-<!-- HERO / JUMBOTRON -->
-<div class="bg-primary text-white text-center py-5" style="margin-top:56px;">
+<!-- BREADCRUMB -->
+<div class="container mt-5 pt-4">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item active">Home</li>
+    </ol>
+  </nav>
+</div>
+
+<!-- JUMBOTRON / INTRO -->
+<div class="jumbotron-custom">
   <div class="container">
     <h1 class="display-5">FCRIT, Vashi</h1>
     <p class="lead mb-1">2nd Year – Information Technology (IT)</p>
-    <p>Aspiring Software Developer</p>
+    <p>A passionate IT student interested in software development</p>
+    <button class="btn btn-light btn-lg mt-3">Know More</button>
   </div>
 </div>
 
-<!-- MARKS SECTION -->
-<div class="container mt-5">
-  <h3 class="text-center mb-4">Previous Semester Marks</h3>
+<!-- MARKS SECTION (GRID SYSTEM) -->
+<div class="container my-5">
+  <h2 class="section-title">Previous Semester Marks</h2>
 
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <table class="table table-bordered table-striped">
+      <table class="table table-bordered table-striped shadow">
         <thead class="table-dark">
           <tr>
             <th>Subject</th>
@@ -42,35 +83,21 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>DSA</td>
-            <td>85</td>
-          </tr>
-          <tr>
-            <td>Mathematics</td>
-            <td>78</td>
-          </tr>
-          <tr>
-            <td>SQL</td>
-            <td>82</td>
-          </tr>
-          <tr>
-            <td>DLDA</td>
-            <td>80</td>
-          </tr>
+          <tr><td>DSA</td><td>85</td></tr>
+          <tr><td>Mathematics</td><td>78</td></tr>
+          <tr><td>SQL</td><td>82</td></tr>
+          <tr><td>DLDA</td><td>80</td></tr>
         </tbody>
       </table>
     </div>
   </div>
 </div>
 
-<!-- SKILLS SECTION -->
-<div class="container mt-5">
-  <h3 class="text-center mb-4">Skills</h3>
+<!-- SKILLS SECTION (GRID + CARDS) -->
+<div class="container my-5">
+  <h2 class="section-title">Skills</h2>
 
   <div class="row g-4">
-
-    <!-- TECHNICAL SKILLS -->
     <div class="col-md-4">
       <div class="card shadow p-3 h-100">
         <h5 class="text-center">Technical Skills</h5>
@@ -82,7 +109,6 @@
       </div>
     </div>
 
-    <!-- EXTRA CURRICULAR -->
     <div class="col-md-4">
       <div class="card shadow p-3 h-100">
         <h5 class="text-center">Extra-Curricular</h5>
@@ -93,7 +119,6 @@
       </div>
     </div>
 
-    <!-- SOFT SKILLS -->
     <div class="col-md-4">
       <div class="card shadow p-3 h-100">
         <h5 class="text-center">Soft Skills</h5>
@@ -104,25 +129,24 @@
         </ul>
       </div>
     </div>
-
   </div>
 </div>
 
-<!-- SUGGESTION FORM -->
-<div class="container mt-5 mb-5">
-  <h3 class="text-center mb-4">Suggestions</h3>
+<!-- SUGGESTION FORM (FORMS + BUTTONS) -->
+<div class="container my-5">
+  <h2 class="section-title">Suggestions</h2>
 
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <form>
+      <form class="shadow p-4 bg-white rounded">
         <div class="mb-3">
           <label class="form-label">Your Name</label>
-          <input type="text" class="form-control" placeholder="Enter your name">
+          <input type="text" class="form-control">
         </div>
 
         <div class="mb-3">
-          <label class="form-label">Suggestion</label>
-          <textarea class="form-control" rows="4" placeholder="Enter your suggestion"></textarea>
+          <label class="form-label">Your Suggestion</label>
+          <textarea class="form-control" rows="4"></textarea>
         </div>
 
         <div class="d-grid">
@@ -134,8 +158,8 @@
 </div>
 
 <!-- FOOTER -->
-<footer class="bg-dark text-white text-center p-3">
-  © 2026 My Portfolio
+<footer class="text-center p-3">
+  © 2026 Student Portfolio
 </footer>
 
 </body>
