--- a/Week03_030226/index.html
+++ b/Week03_030226/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Student Portfolio</title>
 
@@ -10,30 +10,121 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
+    /* GLOBAL STYLES */
     body {
-        font-family: 'Segoe UI', sans-serif;
-        background-color: #f8f9fa;
+        font-family: 'Segoe UI', Tahoma, sans-serif;
+        background-color: #f4f6f9;
+        color: #333;
     }
 
-    /* JUMBOTRON STYLE */
-    .jumbotron-custom {
-        background: linear-gradient(135deg, #667eea, #764ba2);
-        color: white;
-        padding: 80px 20px;
-        text-align: center;
+    section {
+        padding: 70px 0;
     }
 
     .section-title {
         text-align: center;
-        margin-bottom: 30px;
-        font-weight: 600;
-        color: #333;
+        font-weight: 700;
+        margin-bottom: 40px;
+        color: #222;
+        position: relative;
     }
 
-    .card {
+    .section-title::after {
+        content: "";
+        width: 60px;
+        height: 4px;
+        background: #667eea;
+        display: block;
+        margin: 10px auto 0;
+        border-radius: 5px;
+    }
+
+    /* NAVBAR */
+    .navbar {
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    /* JUMBOTRON / INTRO */
+    .intro {
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        color: white;
+        text-align: center;
+        padding: 120px 20px 100px;
+    }
+
+    .intro h1 {
+        font-size: 3.2rem;
+        font-weight: 800;
+        letter-spacing: 1px;
+    }
+
+    .intro h3 {
+        font-weight: 400;
+        margin-top: 15px;
+    }
+
+    .intro p {
+        margin-top: 12px;
+        font-size: 1.1rem;
+        opacity: 0.95;
+    }
+
+    /* BREADCRUMB */
+    .breadcrumb {
+        background-color: transparent;
+        margin-bottom: 0;
+    }
+
+    /* TABLE */
+    .table {
+        background-color: white;
         border-radius: 12px;
+        overflow: hidden;
     }
 
+    /* CARDS */
+    .card {
+        border: none;
+        border-radius: 16px;
+        transition: all 0.3s ease;
+    }
+
+    .card:hover {
+        transform: translateY(-8px);
+        box-shadow: 0 15px 30px rgba(0,0,0,0.15);
+    }
+
+    /* LIST GROUP */
+    .list-group-item {
+        border: none;
+        padding-left: 0;
+        padding-right: 0;
+        font-weight: 500;
+    }
+
+    /* FORM */
+    .form-control {
+        border-radius: 10px;
+        padding: 10px 12px;
+    }
+
+    .form-control:focus {
+        box-shadow: 0 0 0 0.2rem rgba(102,126,234,0.25);
+        border-color: #667eea;
+    }
+
+    /* BUTTON */
+    .btn-success {
+        background: linear-gradient(135deg, #43cea2, #185a9d);
+        border: none;
+        font-weight: 600;
+    }
+
+    .btn-success:hover {
+        opacity: 0.9;
+    }
+
+    /* FOOTER */
     footer {
         background-color: #212529;
         color: white;
@@ -46,7 +137,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Student’s Portfolio</a>
+    <a class="navbar-brand fw-bold">Student’s Portfolio</a>
   </div>
 </nav>
 
@@ -60,102 +151,108 @@
 </div>
 
 <!-- JUMBOTRON / INTRO -->
-<div class="jumbotron-custom">
+<section class="intro">
   <div class="container">
-    <h1 class="display-5">FCRIT, Vashi</h1>
-    <p class="lead mb-1">2nd Year – Information Technology (IT)</p>
-    <p>A passionate IT student interested in software development</p>
-    <button class="btn btn-light btn-lg mt-3">Know More</button>
+    <h1>FCRIT, Vashi</h1>
+    <h3>2nd Year – Information Technology (IT)</h3>
+    <p>A motivated IT student with strong interest in programming and problem-solving</p>
+    <button class="btn btn-light btn-lg mt-4">Explore Portfolio</button>
   </div>
-</div>
+</section>
 
-<!-- MARKS SECTION (GRID SYSTEM) -->
-<div class="container my-5">
-  <h2 class="section-title">Previous Semester Marks</h2>
+<!-- MARKS SECTION -->
+<section>
+  <div class="container">
+    <h2 class="section-title">Previous Semester Marks</h2>
 
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <table class="table table-bordered table-striped shadow">
-        <thead class="table-dark">
-          <tr>
-            <th>Subject</th>
-            <th>Marks (out of 100)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr><td>DSA</td><td>85</td></tr>
-          <tr><td>Mathematics</td><td>78</td></tr>
-          <tr><td>SQL</td><td>82</td></tr>
-          <tr><td>DLDA</td><td>80</td></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-
-<!-- SKILLS SECTION (GRID + CARDS) -->
-<div class="container my-5">
-  <h2 class="section-title">Skills</h2>
-
-  <div class="row g-4">
-    <div class="col-md-4">
-      <div class="card shadow p-3 h-100">
-        <h5 class="text-center">Technical Skills</h5>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Java</li>
-          <li class="list-group-item">Python</li>
-          <li class="list-group-item">C Programming</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card shadow p-3 h-100">
-        <h5 class="text-center">Extra-Curricular</h5>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Chess</li>
-          <li class="list-group-item">Public Speaking</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card shadow p-3 h-100">
-        <h5 class="text-center">Soft Skills</h5>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Confidence</li>
-          <li class="list-group-item">Communication</li>
-          <li class="list-group-item">Teamwork</li>
-        </ul>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <table class="table table-bordered table-striped shadow">
+          <thead class="table-dark">
+            <tr>
+              <th>Subject</th>
+              <th>Marks (out of 100)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>DSA</td><td>85</td></tr>
+            <tr><td>Mathematics</td><td>78</td></tr>
+            <tr><td>SQL</td><td>82</td></tr>
+            <tr><td>DLDA</td><td>80</td></tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
-</div>
+</section>
 
-<!-- SUGGESTION FORM (FORMS + BUTTONS) -->
-<div class="container my-5">
-  <h2 class="section-title">Suggestions</h2>
+<!-- SKILLS SECTION -->
+<section>
+  <div class="container">
+    <h2 class="section-title">Skills</h2>
 
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <form class="shadow p-4 bg-white rounded">
-        <div class="mb-3">
-          <label class="form-label">Your Name</label>
-          <input type="text" class="form-control">
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card shadow p-4 h-100">
+          <h5 class="text-center mb-3">Technical Skills</h5>
+          <ul class="list-group list-group-flush text-center">
+            <li class="list-group-item">Java</li>
+            <li class="list-group-item">Python</li>
+            <li class="list-group-item">C Programming</li>
+          </ul>
         </div>
+      </div>
 
-        <div class="mb-3">
-          <label class="form-label">Your Suggestion</label>
-          <textarea class="form-control" rows="4"></textarea>
+      <div class="col-md-4">
+        <div class="card shadow p-4 h-100">
+          <h5 class="text-center mb-3">Extra-Curricular</h5>
+          <ul class="list-group list-group-flush text-center">
+            <li class="list-group-item">Chess</li>
+            <li class="list-group-item">Public Speaking</li>
+          </ul>
         </div>
+      </div>
 
-        <div class="d-grid">
-          <button class="btn btn-success">Submit</button>
+      <div class="col-md-4">
+        <div class="card shadow p-4 h-100">
+          <h5 class="text-center mb-3">Soft Skills</h5>
+          <ul class="list-group list-group-flush text-center">
+            <li class="list-group-item">Confidence</li>
+            <li class="list-group-item">Communication</li>
+            <li class="list-group-item">Teamwork</li>
+          </ul>
         </div>
-      </form>
+      </div>
     </div>
   </div>
-</div>
+</section>
+
+<!-- SUGGESTION FORM -->
+<section>
+  <div class="container">
+    <h2 class="section-title">Suggestions</h2>
+
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form class="shadow p-4 bg-white rounded">
+          <div class="mb-3">
+            <label class="form-label fw-semibold">Your Name</label>
+            <input type="text" class="form-control">
+          </div>
+
+          <div class="mb-3">
+            <label class="form-label fw-semibold">Your Suggestion</label>
+            <textarea class="form-control" rows="4"></textarea>
+          </div>
+
+          <div class="d-grid">
+            <button class="btn btn-success btn-lg">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- FOOTER -->
 <footer class="text-center p-3">
