--- a/Week01_200126/First.html
+++ b/Week01_200126/First.html
@@ -3,29 +3,260 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BJP Overview</title>
+
+    <style>
+        body {
+            margin: 0;
+            font-family: "Segoe UI", sans-serif;
+            background: linear-gradient(135deg, #ff9933, #ffffff, #138808);
+        }
+
+        /* NAVBAR */
+        nav {
+            background: #e65100;
+            padding: 15px 40px;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        nav h2 {
+            margin: 0;
+            letter-spacing: 2px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin-left: 20px;
+            font-size: 14px;
+        }
+
+        /* MAIN CONTAINER */
+        .container {
+            max-width: 1100px;
+            margin: 40px auto;
+            background: white;
+            border-radius: 18px;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+            padding: 40px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #e65100;
+            margin-bottom: 10px;
+        }
+
+        .subtitle {
+            text-align: center;
+            color: #555;
+            margin-bottom: 40px;
+        }
+
+        /* INFO CARDS */
+        .cards {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 20px;
+            margin-bottom: 40px;
+        }
+
+        .card {
+            background: #fff3e0;
+            padding: 20px;
+            border-radius: 14px;
+            text-align: center;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+        }
+
+        .card h3 {
+            color: #e65100;
+            margin-bottom: 10px;
+        }
+
+        /* IMAGE */
+        .image-section {
+            text-align: center;
+            margin: 40px 0;
+        }
+
+        .image-section img {
+            width: 260px;
+            border-radius: 14px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+        }
+
+        /* CONTENT */
+        p {
+            line-height: 1.8;
+            color: #333;
+            text-align: justify;
+        }
+
+        /* TIMELINE */
+        .timeline {
+            margin: 50px 0;
+            border-left: 4px solid #e65100;
+            padding-left: 25px;
+        }
+
+        .event {
+            margin-bottom: 25px;
+        }
+
+        .event span {
+            color: #e65100;
+            font-weight: 600;
+        }
+
+        /* STATS */
+        .stats {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin: 50px 0;
+        }
+
+        .stat-box {
+            background: #e65100;
+            color: white;
+            padding: 25px;
+            border-radius: 16px;
+            text-align: center;
+        }
+
+        .stat-box h2 {
+            margin: 0;
+            font-size: 36px;
+        }
+
+        /* QUOTE */
+        .quote {
+            background: #f5f5f5;
+            padding: 30px;
+            border-left: 6px solid #e65100;
+            margin: 50px 0;
+            font-style: italic;
+            color: #444;
+        }
+
+        /* LINK */
+        .link-box {
+            text-align: center;
+            margin-top: 30px;
+        }
+
+        .link-box a {
+            background: #e65100;
+            color: white;
+            padding: 12px 28px;
+            border-radius: 25px;
+            text-decoration: none;
+        }
+
+        /* FOOTER */
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            color: #777;
+            font-size: 14px;
+        }
+    </style>
 </head>
+
 <body>
-    
 
+    <nav>
+        <h2>BJP</h2>
+        <div>
+            <a href="#">Home</a>
+            <a href="#">History</a>
+            <a href="#">Leadership</a>
+            <a href="#">Impact</a>
+        </div>
+    </nav>
 
-    <center><h1>MOTA BHAI</h1></center>
-    <p>
-The <strong>Bharatiya Janata Party (BJP)</strong> is one of India’s two major national political parties and 
-currently the dominant political force at the Centre.<br> It was founded in <b>1980</b>, with its ideological roots in Indian nationalism and the philosophy of Hindutva.
-The BJP emerged as a strong national party in the 1990s, first forming a short-lived government in 1996 under Atal Bihari Vajpayee, and later leading stable coalition governments from 1998 to 2004.<br> Its biggest political breakthrough came in 2014, when it won a clear majority under Narendra Modi, ending decades of coalition dependence. <br>The party repeated its majority win in 2019 and continues to lead the government after the 2024 elections through the NDA alliance.<br>
-The BJP focuses on strong central leadership, national security, economic reforms, infrastructure development, and cultural identity.<br> Over the years, it has expanded its presence across most Indian states, transforming from a cadre-based party into a pan-India political organization.<br>
-In short:<br>
-The BJP has reshaped Indian politics by moving from coalition-era politics to long-term dominance, making it one of the most influential parties in India’s democratic history.
-<a href="https://en.wikipedia.org/wiki/Amit_Shah" target="_blank">
-    Visit Amit Shah Wikipedia
-</a>
-<img src="C:\Users\5024131\Downloads\amit.jpg.avif">
+    <div class="container">
 
-</p>
+        <h1>MOTA BHAI</h1>
+        <div class="subtitle">Bharatiya Janata Party | Leadership & Influence</div>
 
+        <div class="cards">
+            <div class="card">
+                <h3>Founded</h3>
+                <p>1980</p>
+            </div>
+            <div class="card">
+                <h3>Ideology</h3>
+                <p>Nationalism & Hindutva</p>
+            </div>
+            <div class="card">
+                <h3>Major Victory</h3>
+                <p>2014 General Elections</p>
+            </div>
+            <div class="card">
+                <h3>Alliance</h3>
+                <p>NDA</p>
+            </div>
+        </div>
 
+        <p>
+            The Bharatiya Janata Party (BJP) is one of India’s two major national political parties and currently the dominant political force at the Centre.
+            It emerged as a strong national party in the 1990s and reshaped Indian politics by moving away from coalition dependency.
+        </p>
 
-    
+        <div class="image-section">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/Amit_Shah_2023.jpg" alt="Amit Shah">
+        </div>
+
+        <div class="timeline">
+            <div class="event">
+                <span>1980:</span> BJP founded.
+            </div>
+            <div class="event">
+                <span>1996:</span> First government under Atal Bihari Vajpayee.
+            </div>
+            <div class="event">
+                <span>2014:</span> Historic majority victory.
+            </div>
+            <div class="event">
+                <span>2019 & 2024:</span> Continued dominance through NDA.
+            </div>
+        </div>
+
+        <div class="stats">
+            <div class="stat-box">
+                <h2>300+</h2>
+                <p>Lok Sabha Seats (2019)</p>
+            </div>
+            <div class="stat-box">
+                <h2>20+</h2>
+                <p>States Governed</p>
+            </div>
+            <div class="stat-box">
+                <h2>40+</h2>
+                <p>Alliance Partners</p>
+            </div>
+        </div>
+
+        <div class="quote">
+            “Strong leadership and decisive governance have become defining features of modern Indian politics.”
+        </div>
+
+        <div class="link-box">
+            <a href="https://en.wikipedia.org/wiki/Amit_Shah" target="_blank">
+                Visit Amit Shah Wikipedia
+            </a>
+        </div>
+
+        <footer>
+            Designed using HTML & CSS | College Submission Ready
+        </footer>
+
+    </div>
+
 </body>
 </html>
