--- a/Week04_100226/some.html
+++ b/Week04_100226/some.html
@@ -18,7 +18,7 @@
   <div class="grid">
 
     <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Max_Verstappen_2023.jpg">
+      <img src="max.jpg">
       <h3>Max Verstappen</h3>
       <p>Red Bull Racing</p>
     </div>
