--- a/Week04_100226/some.html
+++ b/Week04_100226/some.html
@@ -24,19 +24,19 @@
     </div>
 
     <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Lewis_Hamilton_2022.jpg">
+      <img src="lewis.jpg">
       <h3>Lewis Hamilton</h3>
       <p>Mercedes</p>
     </div>
 
     <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Charles_Leclerc_2022.jpg">
+      <img src="charles.jpg">
       <h3>Charles Leclerc</h3>
       <p>Ferrari</p>
     </div>
 
     <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Lando_Norris_2023.jpg">
+      <img src="lando.jpg">
       <h3>Lando Norris</h3>
       <p>McLaren</p>
     </div>
